--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-stable bar-positive">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -12,23 +12,40 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+  <ion-side-menu side="left" class="custom-menu">
+    <ion-header-bar class="bar-stable bar-positive">
+      <h1 class="title">Checkpoint</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item 
+        	menu-close 
+        	class="item-icon-left" 
+        	href="#/app/home"
+        	 >
+          <i class="icon ion-ios-home"></i>
+          Accueil
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item 
+        	menu-close 
+        	class="item-icon-left" 
+        	href="#/app/patients"
+        	 >
+          <i class="icon ion-ios-people"></i>
+          Patients
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item 
+        	menu-close 
+        	class="item-icon-left"  >
+          <i class="icon ion-ios-medkit"></i>
+          Tournées
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item 
+        	menu-close 
+        	class="item-icon-left" 
+        	href="#/app/login">
+        	<i class="icon ion-log-in"></i>
+          Se connecter
         </ion-item>
       </ion-list>
     </ion-content>
