--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Accueil">
   <ion-content>
 
+		<div class="card">
+			<h1>{{getCurrentApplication().name}}</h1>
+		</div>
+		
+
   </ion-content>
 </ion-view>
