--- a/www/templates/newapplication.html
+++ b/www/templates/newapplication.html
@@ -1,17 +1,22 @@
 
-<ion-modal-view>
+<ion-modal-view class="app-modal">
     <ion-header-bar>
       <h1 class="title">Créez votre espace !</h1>
     </ion-header-bar>
     <ion-content ng-controller="ApplicationCtrl">
-  	
+  		<div class="padding">
+  		<p>
+  			Vous n'avez pas encore d'espace. Cet espace est nécéssaire pour stocker vos fiches patients. 
+  			Vous pouvez lui donner un nom  (le nom de votre cabinet par exemple ).
+  		</p>
+  		</div>
 		<form novalidate class="simple-form" name="applicationForm" autocomplete="off" >
     		<ion-list>
 			   
 			
 				<div class="item item-input-inset">
 			      <label class="item item-input-wrapper">
-			      <i class="icon ion-ios-email-outline placeholder-icon larger"></i>
+			      <i class="icon ion-ios-home-outline placeholder-icon larger"></i>
 			      <input type="text" 
 			      		ng-model="application.name"
 			      		placeholder="Nom de votre cabinet">
