--- a/www/templates/patients.html
+++ b/www/templates/patients.html
@@ -9,7 +9,7 @@
   
   <ion-content>
   	 <ion-refresher
-	    pulling-text="Pull to refresh..."
+	    pulling-text="Tirez vers le bas pour rafraichir..."
 	    on-refresh="listPatients()">
 	  </ion-refresher>
   
@@ -31,7 +31,9 @@
 		    <ion-option-button class="button-info">
 		      Editer
 		    </ion-option-button>
-		   
+		   <div class="item-icon-right">
+        		<i class="icon ion-ios-arrow-right"></i>
+    		</div>
 		</ion-item>
 	</ion-list>
 	
