--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,10 +13,12 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left" class="custom-menu">
-    <ion-header-bar class="bar-stable bar-positive">
-      <h1 class="title">Checkpoint</h1>
-    </ion-header-bar>
+    
     <ion-content>
+    <div class="padding" style="text-align:center">
+    <img src="img/checkpoint.png" style="width:33%" />
+    <h2 style="color:white">Checkpoint</h2>
+    </div>
       <ion-list>
         <ion-item 
         	menu-close 
