--- a/www/templates/login.create.account.html
+++ b/www/templates/login.create.account.html
@@ -1,30 +1,40 @@
 
-<ion-modal-view class="login-modal">
-    <ion-header-bar class="login-bar">
-      <h1 class="title">Connexion</h1>
-    </ion-header-bar>
-    <ion-content ng-controller="LoginCtrl" class="login-content">
-  	
+<ion-view cache-view="false">
+    <ion-nav-bar class="bar-light">
+		<!--Logo-->
+		<ion-nav-buttons  side="right">
+		</ion-nav-buttons>
+		<ion-nav-buttons side="left">
+		</button>
+	</ion-nav-bar>
+    <ion-content class="login-content">  	
 		<form novalidate class="simple-form" name="accountForm" dont-fill >
     		<ion-list>
-			   
-			
 				<div class="item item-input-inset">
 			      <label class="item item-input-wrapper">
 			      <i class="icon ion-ios-email-outline placeholder-icon larger"></i>
 			      <input type="text" 
-			      		ng-model="user.email"
+			      		ng-model="newuser.email"
 			      		ng-required="true"
 			      		autocomplete="off"
 			      		placeholder="Votre email">
 			      </label>
 			   </div>
-			
 				<div class="item item-input-inset">
 			      <label class="item item-input-wrapper">
 			      <i class="icon ion-ios-unlocked-outline placeholder-icon larger"></i>
 			      <input type="password" 
-			      		ng-model="user.password"
+			      		ng-model="newuser.password"
+			      		ng-required="true"
+			      		autocomplete="off"
+			      		placeholder="Votre mot de passe">
+			      </label>
+			   </div>
+			   	<div class="item item-input-inset">
+			      <label class="item item-input-wrapper">
+			      <i class="icon ion-ios-unlocked-outline placeholder-icon larger"></i>
+			      <input type="password" 
+			      		ng-model="newuser.passwordAgain"
 			      		ng-required="true"
 			      		autocomplete="off"
 			      		placeholder="Votre mot de passe">
@@ -32,21 +42,10 @@
 			   </div>
     		</ion-list>
     		<div class="padding">
-				<button class="button button-block button-positive" ng-click="login()">Se connecter</button>
+				<button class="button button-block button-positive" ng-click="createAccount()">Créer mon compte</button>
     		</div>
     	</form>
-		
-    	
-	
-			<br />
-			<div style="text-align:center">Pas encore de compte ?</div>
-			<div class="padding">
-				<button class="button button-block button-positive" ng-click="openCreateAccountModal()">Créer un compte</button>
-    		</div>
-		
-	
-	
     </ion-content>
-  </ion-modal-view>
+  </ion-view>
 
 
