Ajout de la notion de commentaires patient

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,7 +10,7 @@
 			<ion-item href="#/app/patients" >
 				<i class="icon ion-ios-people"></i>
 				Patients
-				<span class="badge badge-stable">260</span>     
+				<span class="badge badge-stable">{{patients.length}}</span>     
 				<div class="item-icon-right">
 			    	<i class="icon ion-ios-arrow-right"></i>
 			    </div>
