--- a/www/templates/login.signin.html
+++ b/www/templates/login.signin.html
@@ -1,5 +1,6 @@
-<ion-view cache-view="false"> 
-	<ion-nav-bar class="bar-light">
+<ion-view cache-view="false" class="bg-login"> 
+	
+<ion-nav-bar class="no-border">
 		<!--Logo-->
 		<ion-nav-buttons  side="right">
 		</ion-nav-buttons>
@@ -7,10 +8,14 @@
 		</button>
 	</ion-nav-bar>
 
-
 	<ion-content>
+	
+		<div style="text-align:center">
+			<img src="img/check.png" style="width:40%" />
+		</div>
+	
 		<form novalidate class="simple-form" name="accountForm" dont-fill>
-			<ion-list>
+			<ion-list class="no-border">
 			<div class="item item-input-inset">
 				<label class="item item-input-wrapper"> <i
 					class="icon ion-ios-email-outline placeholder-icon larger"></i> <input
@@ -28,14 +33,16 @@
 			</div>
 			</ion-list>
 			<div class="padding">
-				<button class="button button-block button-positive" ng-click="login()">Se
+				<button class="button button-block " ng-click="login()">Se
 					connecter</button>
 			</div>
 		</form>
 		<br />
-		<div style="text-align: center">
-			Pas encore de compte ? <a href="javascript:;"
-				ng-click="goLoginCreate()">Créer un compte</a>
+		<div style="text-align: center;color:white">
+			Pas encore de compte ? 
+				<a 	href="javascript:;"
+					style="color:white"
+					ng-click="goLoginCreate()">Créez en un !</a>
 		</div>
 	</ion-content>
 </ion-view>
