--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -52,10 +52,10 @@
         </ion-item>
         
           <ion-item 
-        	ng-if="userIsConnected()"
-        	menu-close 
+        	ng-if="userIsConnected()" 
+        	menu-close  
         	class="item-icon-left" 
-        	href="#/app/home" 
+        	href="#/app/login"
         	ng-click="logout()">
         	<i class="icon ion-log-out"></i>
           Se déconnecter
