--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,9 @@
+
+.no-border, .no-border .item-input-inset {
+	border:none;
+	background:none;
+}
+
 .bar-positive {
 	background-color:#7d0000 !important;
 	bortder:none !important;
@@ -6,6 +12,16 @@
 .bar.bar-positive {
 	border:none !important;
 	background: none;
+}
+
+.bg-login {
+	background-image:url("bg-login.png"); 
+	background-size:100%;
+	background-repeat:repeat-y;
+}
+
+.popup {
+    border-radius: 10px !important;
 }
 
 .item .badge {
@@ -105,6 +121,14 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 	background:none;
 }
 
+/*
+** Custom footer
+*/
+.custom-footer {
+	position:absolute;
+	bottom:0;
+	background-color: rgba(255, 255, 255, 0.5);
+}
 /*
 ** Application Page
 */
