--- a/www/templates/login.create.account.html
+++ b/www/templates/login.create.account.html
@@ -1,5 +1,5 @@
 
-<ion-view cache-view="false" class="bg-login">
+<ion-view cache-view="false" class="bg-boot">
     <ion-nav-bar class="no-border">
 		<!--Logo-->
 		<ion-nav-buttons  side="right">
