--- a/www/templates/login.signin.html
+++ b/www/templates/login.signin.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" class="bg-login"> 
+<ion-view cache-view="false" class="bg-boot"> 
 	
 <ion-nav-bar class="no-border">
 		<!--Logo-->
