--- a/www/templates/newapplication.html
+++ b/www/templates/newapplication.html
@@ -1,34 +1,61 @@
-
-<ion-modal-view class="app-modal">
-    <ion-header-bar>
-      <h1 class="title">Créez votre espace !</h1>
-    </ion-header-bar>
-    <ion-content ng-controller="ApplicationCtrl">
-  		<div class="padding">
-  		<p>
-  			Vous n'avez pas encore d'espace. Cet espace est nécéssaire pour stocker vos fiches patients. 
-  			Vous pouvez lui donner un nom  (le nom de votre cabinet par exemple ).
-  		</p>
-  		</div>
-		<form novalidate class="simple-form" name="applicationForm" autocomplete="off" >
-    		<ion-list>
-			   
-			
-				<div class="item item-input-inset">
-			      <label class="item item-input-wrapper">
-			      <i class="icon ion-ios-home-outline placeholder-icon larger"></i>
-			      <input type="text" 
-			      		ng-model="application.name"
-			      		placeholder="Nom de votre cabinet">
-			      </label>
-			   </div>
-    		</ion-list>
-    		<div class="padding">
-				<button class="button button-block button-positive" ng-click="createApplication()">Créer votre espace</button>
-    		</div>
-    	</form>
+<ion-view cache-view="false" class="bg-boot">
+    <ion-nav-bar class="no-border">
+		<!--Logo-->
+		<ion-nav-buttons  side="right">
+		</ion-nav-buttons>
+		<ion-nav-buttons side="left">
+		</button>
+	</ion-nav-bar>
+    <ion-content class="login-content">  
+  		<div class="card" >
+	  		<div class="item item-text-wrap">	
+		  		<p>
+		  			Vous n'avez pas encore d'espace. Cet espace est nécéssaire pour stocker vos fiches patients. 
+		  			Vous pouvez lui donner un nom  (le nom de votre cabinet par exemple).
+		  		</p>
+				<form novalidate class="simple-form" name="applicationForm" autocomplete="off" >
+		    		<ion-list>
+						<div class="item item-input-inset">
+					      <label class="item item-input-wrapper">
+					      <i class="icon ion-ios-home-outline placeholder-icon larger"></i>
+					      <input type="text" 
+					      		ng-model="cabinet.name"
+					      		placeholder="Nom de votre cabinet">
+					      </label>
+					   </div>
+		    		</ion-list>
+		    		<div class="padding">
+						<button class="button button-block button-positive" ng-click="createCabinet()">Créer votre espace</button>
+		    		</div>
+		    	</form>
+	    	</div>
+    	</div>
+    	
+    	<div class="card" >
+	  		<div class="item item-text-wrap">	
+	  			<p>Vous avez reçu un code pour rejoindre un cabinet existant ? Entre le ci dessous :
+	  			
+	  			<form novalidate class="simple-form" name="applicationForm" autocomplete="off" >
+		    		<ion-list>
+						<div class="item item-input-inset">
+					      <label class="item item-input-wrapper">
+					      <i class="icon ion-lock-combination placeholder-icon larger"></i>
+					      <input type="text" 
+					      		ng-model="cabinet.shortCode"
+					      		placeholder="Code du cabinet">
+					      </label>
+					   </div>
+		    		</ion-list>
+		    		<div class="padding">
+						<button class="button button-block button-positive" ng-click="joinCabinet()">Rejoindre</button>
+		    		</div>
+		    	</form>	
+	  		
+	  		
+	  		</div>
+	  	</div>
 	
     </ion-content>
-  </ion-modal-view>
+  </ion-view>
 
 
