Refactor pour coller avec les nouvelles API

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,7 +3,7 @@
 
 		<div class="padding">
 		
-			<h3 class="ion-home"> {{getCurrentApplication().name}}</h3>
+			<h3 class="ion-ios-briefcase-outline"> {{getCurrentCabinet().name}}</h3>
 		</div>
 		
 		<ion-list>
