Modification du splash

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,8 @@ input {
 }
 
 .bar-positive {
-	background-color:#7d0000 !important;
+	//background:none !important;
+	background-image:url("bg-pattern.png") !important; 
 	bortder:none !important;
 }
 
@@ -19,9 +20,8 @@ input {
 }
 
 .bg-boot {
-	background-image:url("bg-login.png"); 
-	background-size:100%;
-	background-repeat:repeat-y;
+	background-image:url("bg-pattern.png"); 
+
 }
 
 .popup {
@@ -51,7 +51,7 @@ input {
 ** Custom menu
 */
 .custom-menu {
-	background-color: #7d0000;
+		background-image:url("bg-pattern.png"); 
 }
 
 .custom-menu .item {
@@ -61,7 +61,7 @@ input {
 }
 
 .custom-menu a.item-content {
-	background-color: #7d0000;
+	background:none;
 	color: white;
 }
 
