--- a/www/templates/login.create.account.html
+++ b/www/templates/login.create.account.html
@@ -10,7 +10,7 @@
     <ion-content class="login-content">  
     
     	<div style="text-align:center">
-			<img src="img/check.png" style="width:40%" />
+			<img src="img/ilet-logo.png" style="width:40%" />
 		</div>
     	
 		<form novalidate class="simple-form" name="accountForm" dont-fill >
