--- a/www/templates/login.signin.html
+++ b/www/templates/login.signin.html
@@ -5,13 +5,13 @@
 		<ion-nav-buttons  side="right">
 		</ion-nav-buttons>
 		<ion-nav-buttons side="left">
-		</button>
+		</ion-nav-buttons>
 	</ion-nav-bar>
 
 	<ion-content>
 	
 		<div style="text-align:center">
-			<img src="img/check.png" style="width:40%" />
+			<img src="img/ilet-logo.png" style="width:40%" />
 		</div>
 	
 		<form novalidate class="simple-form" name="accountForm" dont-fill>
