Ajout des UIs tournées

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -53,7 +53,9 @@
         </ion-item>
         <ion-item 
         	menu-close 
-        	class="item-icon-left"  >
+        	class="item-icon-left" 
+        	href="#/app/tournees"
+        	 >
           <i class="icon ion-ios-medkit"></i>
           Tournées
         </ion-item>
